[package]
name = "mfmt"
description = "Meta formatter library"
version = "0.4.0"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/raviqqe/mfmt"
readme = "./README.md"
keywords = ["format", "language"]

[dependencies]
allocator-api2 = "0.2.21"

[dev-dependencies]
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
indoc = "2.0.6"
pretty_assertions = "1.4.1"
