[package]
name = "mfmt"
version = "0.4.1"
edition = "2024"
description = "Meta formatter library"
readme = "./README.md"
repository = "https://github.com/raviqqe/mfmt"
license = "Unlicense"
keywords = ["format", "language"]

[dependencies]
allocator-api2 = "0.2.21"

[dev-dependencies]
bumpalo = { version = "3.19.0", features = ["allocator-api2"] }
indoc = "2.0.6"
pretty_assertions = "1.4.1"
