[package]
name = "mfmt"
version = "0.4.2"
edition = "2024"
description = "Meta formatter library"
readme = "./README.md"
repository = "https://github.com/raviqqe/mfmt"
license = "Unlicense"
keywords = ["format", "language"]

[dependencies]
allocator-api2 = "0.2.21"

[dev-dependencies]
bumpalo = { version = "3.20.1", features = ["allocator-api2"] }
indoc = "2.0.7"
pretty_assertions = "1.4.1"
